Fix scrollbar & update ruby version
Turns out, netlify only caches ruby 2.5.x on ubuntu 14, and the recent change to ubuntu 16 requires 2.6.x instead.

Double scrollbars are :sob:

--- a/_assets/css/code-highlight.scss
+++ b/_assets/css/code-highlight.scss
@@ -7,10 +7,10 @@ pre.highlight {
 	background: #31343f;
 	color: #dee2f7;
 	padding: 0.5em;
-	overflow-x: scroll;
 }
 
 .highlight pre {
+	overflow-x: auto;
 	background: #31343f
 }
 
